put cards from play onto discard